--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 <div class="header" id="header">
                     <div class="content-inner">
                         <p>I'm</p>
-                        <h1>Michael Miller</h1>
+                        <h1>Tyler Boyd</h1>
                         <h2></h2>
-                        <div class="typed-text">Web Designer, Web Developer, Front End Developer, Apps Developer, Graphic Designer</div>
+                        <div class="typed-text">DevOps Engineer, Cloud Tech, Linux Specialist</div>
                     </div>
                 </div>
                 <!-- Header End -->
@@ -99,7 +99,7 @@
                             </div>
                             <div class="col-md-6 col-lg-7">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci. Donec molestie velit id libero blandit, quis suscipit urna suscipit. Donec aliquet erat eu lacinia iaculis. Ut tempor tellus eu sem pharetra feugiat. Proin libero ligula, gravida at porttitor eget.
+                                    As a dedicated IT Engineer, I bring a comprehensive blend of technical expertise and practical experience to any team. With a proven track record of successfully designing, implementing, managing, patching/upgrading, enhancing, and deploying cloud-based automated solutions, I excel in leading infrastructure provisioning, configuration management, and CI/CD application development while ensuring compliance.
                                 </p>
                                 <a class="btn" href="#">Hire Me</a>
                             </div>
@@ -152,13 +152,6 @@
                             <div class="col-md-6">
                                 <div class="edu-col">
                                     <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
-                                    <h3>Master Degree</h3>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="edu-col">
-                                    <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
                                     <h3>Bachelor Degree</h3>
                                     <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
                                 </div>
@@ -166,7 +159,14 @@
                             <div class="col-md-6">
                                 <div class="edu-col">
                                     <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
-                                    <h3>Associate Degree</h3>
+                                    <h3>Certifications</h3>
+                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="edu-col">
+                                    <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
+                                    <h3>Skills</h3>
                                     <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
                                 </div>
                             </div>
@@ -191,29 +191,47 @@
                         <div class="row align-items-center">
                             <div class="col-md-6">
                                 <div class="exp-col">
-                                    <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
-                                    <h3>Codex Solution</h3>
-                                    <h4>San Francisco, CA</h4>
-                                    <h5>Project Manager</h5>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                    <span>Sep-2023 <i>to</i> May-2024</span>
+                                    <h3>iCare Medical</h3>
+                                    <h4>Texas City, TX</h4>
+                                    <h5>Junior DevOps Engineer</h5>
+                                    <p>Infrastructure as Code (IaC): Developed and maintained infrastructure as code using Terraform, ensuring efficient and repeatable deployment processes.</p>
+                                    <p>Linux Systems Administration: Managed Linux servers, including SSH access, command line operations, server patching, upgrading, and updating, ensuring optimal performance and security.</p>
+                                    <p>Cloud Technologies: Utilized Amazon AWS for cloud solutions and repository management, optimizing cloud resource utilization and cost efficiency.</p>
+                                    <p>Containerization: Implemented containerization with Docker, Docker Compose, and Docker Swarm, facilitating consistent and scalable application deployment.</p>
+                                    <p>Continuous Integration/Continuous Deployment (CI/CD): Integrated and deployed CI/CD pipelines using Git and AWS, automating the software delivery process to enhance productivity and reduce errors.</p>
+                                    <p>Scripting & Automation: Automated tasks and processes with Bash shell scripting, improving operational efficiency and reducing manual intervention.</p>
+                                    <p>Version Control and Collaboration: Used version control systems including Git, GitHub, and GitLab to manage code repositories, facilitating collaboration and ensuring version control integrity.</p>
+                                    <p>Operating Systems: Worked across various operating systems: Linux, Windows, MacOS, Unix, and virtual machines, adapting to different environments and requirements.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="exp-col">
-                                    <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
-                                    <h3>Soft Solution Ltd</h3>
-                                    <h4>San Francisco, CA</h4>
-                                    <h5>Web Developer</h5>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                    <span>Sep-2021 <i>to</i> May-2023</span>
+                                    <h3>Concierge Sleep and Wellness</h3>
+                                    <h4>Houston, TX</h4>
+                                    <h5>Junior Cloud Tech</h5>
+                                    <p>Medication Pipeline System: Designed and built a pipeline system that specified medications for patients in need.</p>
+                                    <p>Continuous Scheduling Updates: Deployed continuous scheduling updates for patients receiving care at Concierge Sleep & Wellness.</p>
+                                    <p>Automated Backups: Implemented automated backups to protect critical patient data, ensuring the safety of sensitive information.</p>
+                                    <p>Website Management: Monitored, managed, and configured the running Concierge Sleep & Wellness website alongside software developers.</p>
+                                    <p>CI/CD Pipelines: Assisted in the automation and maintenance of CI/CD pipelines through Bash shell automated messages, implementing scaling and replicating to diagnose build failures, ensuring smooth deployment and testing workflows.</p>
+                                    <p>Azure Artifact Repositories: Managed Azure Artifact repositories to ensure reliable access to software resources supporting wellness services and event coordination.</p>
+                                    <p>Automated Medication Dispensing System: Implemented an automated medication dispensing system on Microsoft Azure using Terraform to manage the deployment and scaling of the system. Developed using Java to ensure accurate and error-free medication management for patients</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="exp-col">
-                                    <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
-                                    <h3>ABC Soft Ltd</h3>
-                                    <h4>San Francisco, CA</h4>
-                                    <h5>Web Designer</h5>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                    <span>Feb-2021 <i>to</i> Aug-2021</span>
+                                    <h3>LetBob Technologies</h3>
+                                    <h4>Washington DC</h4>
+                                    <h5>Linux Administrator Intern</h5>
+                                    <p>File and Directory Permissions Management: Managed file and directory permissions using commands. Set appropriate permissions to ensure security and proper access control.</p>
+                                    <p>User and Group Management: Created and managed user accounts and groups to control access. Used commands to add users to groups, change user information, and set passwords. Ensured each user had appropriate permissions and access levels.</p>
+                                    <p>Software Installation and Management: Installed and managed software packages. Managed package updates and removals to ensure the system was up-to-date and secure.</p>
+                                    <p>System Inventory: Monitored Linux systems servers by using commands to perform system inventory tasks. Scheduled and performed regular maintenance tasks, such as log rotation and disk cleanup, to ensure optimal performance.</p>
+                                    <p>Security Management: Managed security settings to protect the server from unauthorized access. Configured SSH for secure remote access and used tools like fail2ban to protect against brute force attacks. Regularly updated the system to patch security vulnerabilities.</p>
+                                    <p>Documentation and Reporting: Documented all procedures, configurations, and changes made to the server environment. Created and maintained detailed logs for troubleshooting and future reference. Provided regular reports on system status and performance to the senior administrator.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
