--- a/index.html
+++ b/index.html
@@ -151,23 +151,33 @@
                         <div class="row align-items-center">
                             <div class="col-md-6">
                                 <div class="edu-col">
-                                    <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
                                     <h3>Bachelor Degree</h3>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                    <p>Public Health Science</p>
+                                    <p>GPA: 3.6</p>
+                                    <p>University of Maryland, College Park</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="edu-col">
-                                    <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
                                     <h3>Certifications</h3>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                    <p>Terraform</p>
+                                    <p>RHCSA</p>
+                                    <p>DCA</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="edu-col">
-                                    <span>01-Jan-2020 <i>to</i> 31-Dec-2050</span>
                                     <h3>Skills</h3>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                    <p>Infrastructure as Code (IaC): Terraform, Lambda</p>
+                                    <p>Linux: Server SSH, Commands, Server Patching, Upgrading, & Updating</p>
+                                    <p>CloudTechnologies: Amazon AWS, Terraform, AzureVMware, Repository</p>
+                                    <p>Containerization: Docker, Docker Compose, Docker Swarm, Kubernetes</p>
+                                    <p>Continuous Integration/Continuous Deployment (CI/CD): Git, Jenkins, Azure, AWS</p>
+                                    <p>Scripting & Automation: Bash Shell Script, YAML, Jenkins, SQL, Lamp Stack, Lambda</p>
+                                    <p>Version Control: Git, GitHub, Gitlab, Azure</p>
+                                    <p>Collaboration & Communication: Problem Solver, Adaptable, Clear Communicator</p>
+                                    <p>Operating Systems: Linux, Windows, MacOS, Unix, Virtual Machines, Database</p>
+                                    <p>Scripting Languages: Python, HashiCorp, Linux Commands</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
