--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <p>
                                     As a dedicated IT Engineer, I bring a comprehensive blend of technical expertise and practical experience to any team. With a proven track record of successfully designing, implementing, managing, patching/upgrading, enhancing, and deploying cloud-based automated solutions, I excel in leading infrastructure provisioning, configuration management, and CI/CD application development while ensuring compliance.
                                 </p>
-                                <a class="btn" href="#">Hire Me</a>
+                                <a class="btn" href="#">GitHub</a>
                             </div>
                         </div>
                         <div class="row">
