--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <!-- Large Button Start -->
                 <div class="large-btn">
                     <div class="content-inner">
-                        <a class="btn" href="#"><i class="fa fa-download"></i>Resume</a>
+                        <a class="btn" href="https://jade-mercy-49.tiiny.site/"><i class="fa fa-download"></i>Resume</a>
                         <a class="btn" href="#"><i class="fa fa-hands-helping"></i>Hire Me</a>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                                 <p>
                                     As a dedicated IT Engineer, I bring a comprehensive blend of technical expertise and practical experience to any team. With a proven track record of successfully designing, implementing, managing, patching/upgrading, enhancing, and deploying cloud-based automated solutions, I excel in leading infrastructure provisioning, configuration management, and CI/CD application development while ensuring compliance.
                                 </p>
-                                <a class="btn" href="#">GitHub</a>
+                                <a class="btn" href="https://github.com/tyleboyd?tab=repositories">GitHub</a>
                             </div>
                         </div>
                         <div class="row">
