--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <!-- Large Button Start -->
                 <div class="large-btn">
                     <div class="content-inner">
-                        <a class="btn" href="https://jade-mercy-49.tiiny.site/"><i class="fa fa-download"></i>Resume</a>
+                        <a class="btn" href="https://gray-oriana-96.tiiny.site/"><i class="fa fa-download"></i>Resume</a>
                         <a class="btn" href="#"><i class="fa fa-hands-helping"></i>Hire Me</a>
                     </div>
                 </div>
