chat gpt education update3

--- a/index.html
+++ b/index.html
@@ -188,6 +188,17 @@
                             <div class="edu-col">
                                 <span>01-Jan-2020 <i>to</i> 31
 
+                                    <h3>High School</h3>
+                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Education Start -->
+                
+                <!-- Experience Start -->
+                <div class="experience" id="experience">
                     <div class="content-inner">
                         <div class="content-header">
                             <h2>Experience</h2>
