--- a/index.html
+++ b/index.html
@@ -458,17 +458,17 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="contact-info">
-                                <p><i class="fa fa-user"></i>Michael Miller</p>
-                                <p><i class="fa fa-tag"></i>Web Designer & Developer</p>
-                                <p><i class="fa fa-envelope"></i><a href="mailto:info@example.com">info@example.com</a></p>
-                                <p><i class="fa fa-phone"></i><a href="tel:+1234567890">+123-456-7890</a></p>
-                                <p><i class="fa fa-map-marker"></i>123 Street, Los Angeles, CA, USA</p>
+                                <p><i class="fa fa-user"></i>Tyler Boyd</p>
+                                <p><i class="fa fa-tag"></i>Cloud Engineer</p>
+                                <p><i class="fa fa-envelope"></i><a href="mailto:info@example.com">tyleboyd8@gmail.com</a></p>
+                                <p><i class="fa fa-phone"></i><a href="tel:+1234567890">+202-578-7828</a></p>
+                                <p><i class="fa fa-map-marker"></i>Silver Spring, MD, USA</p>
                                 <div class="social">
                                     <a class="btn" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn" href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a class="btn" href=""><i class="fab fa-instagram"></i></a>
-                                    <a class="btn" href=""><i class="fab fa-youtube"></i></a>
+                                    <a class="btn" href="https://www.facebook.com/tyler.boyd.73/"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn" href="https://www.linkedin.com/in/tyler-boyd-78665320a/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn" href="https://www.instagram.com/theothertylerboyd/"><i class="fab fa-instagram"></i></a>
+                                    <a class="btn" href="https://www.youtube.com/channel/UChx0UHm_8P0oRWxFWpDJn8w"><i class="fab fa-youtube"></i></a>
                                 </div>
                             </div>
                         </div>
