--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Resume Website Template Free Download</title>
+    <title>Tyler Boyd</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Resume Website Template Free Download" name="keywords">
     <meta content="Resume Website Template Free Download" name="description">
@@ -81,7 +81,7 @@
             <!-- Large Button Start -->
             <div class="large-btn">
                 <div class="content-inner">
-                    <a class="btn" href="https://fuchsia-maure-36.tiiny.site"><i class="fa fa-download"></i>Resume</a>
+                    <a class="btn" href="resume.html"><i class="fa fa-download"></i>Resume</a>
                     <a class="btn" href="#"><i class="fa fa-hands-helping"></i>Hire Me</a>
                 </div>
             </div>
@@ -294,7 +294,7 @@
                             <div class="srv-col">
                                 <i class="fa fa-envelope-open-text"></i>
                                 <h3>Digital Marketing</h3>
-                                <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                <p>Lorem ipsuddddddddm dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
                             </div>
                         </div>
                     </div>
