--- a/resume.html
+++ b/resume.html
@@ -1,24 +1,8 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-<title>Resume</title>
-<style>
-    body{
-        background: #F6D155;
-    }
-    .pdf{
-        width: 100%;
-        aspect-ratio: 4 / 3;
-    }
-
-    .pdf,
-    html,
-    body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-    }
-</style>
+    <link href="css/style.css" rel="stylesheet"></link>
+    <title>Resume</title>
 </head>
 <body>
     <object class = "pdf" data = "pdf/Tyler Boyd Resume.pdf" width = "800" height="500"></object>
