--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </nav>
             </div>
             <div class="sidebar-footer">
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
                 <a href="https://www.facebook.com/tyler.boyd.73/"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.linkedin.com/in/tyler-boyd-78665320a/"><i class="fab fa-linkedin-in"></i></a>
             </div>
