--- a/index.html
+++ b/index.html
@@ -380,20 +380,20 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form">
-                                <form>
+                                <form action="https://formspree.io/f/mjkbledk" method="POST">
                                     <div class="form-row">
                                         <div class="form-group col-md-6">
-                                            <input type="text" class="form-control" placeholder="Your Name" />
+                                            <input type="text" class="form-control" name="name" placeholder="Your Name" required />
                                         </div>
                                         <div class="form-group col-md-6">
-                                            <input type="email" class="form-control" placeholder="Your Email" />
+                                            <input type="email" class="form-control" name="email" placeholder="Your Email" required />
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Subject" />
+                                        <input type="text" class="form-control" name="subject" placeholder="Subject" required />
                                     </div>
                                     <div class="form-group">
-                                        <textarea class="form-control" rows="5" placeholder="Message"></textarea>
+                                        <textarea class="form-control" name="message" rows="5" placeholder="Message" required style="width: 100%; height: 150px;"></textarea>
                                     </div>
                                     <div><button class="btn" type="submit">Send Message</button></div>
                                 </form>
