--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="header" id="header">
                 <div class="content-inner">
                     <p>I'm</p>
-                    <h1>Tyler Boyd</h1>
+                    <h1>Tyler Boyyd</h1>
                     <h2></h2>
                     <div class="typed-text">DevOps Engineer, Cloud Tech, Linux Specialist</div>
                 </div>
