Objec to IFrame Resume

--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,6 @@
     <title>Resume</title>
 </head>
 <body>
-    <object class = "pdf" data = "pdf/Tyler Boyd Resume.pdf" width = "800" height="500"></object>
+    <iframe class = "pdf" src = "pdf/Tyler Boyd Resume.pdf" width = "800" height="500"></iframe>
 </body>
 </html>
