--- a/index.html
+++ b/index.html
@@ -151,16 +151,15 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="edu-col">
-                                <h3>Bachelor Degree</h3>
+                                <h3>University of Maryland, College Park</h3>
+                                <p>Bachelor of Science</p>
                                 <p>Public Health Science</p>
-                                <p>University of Maryland, College Park</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="edu-col">
-                                <h3>Information Systems</h3>
-                                <p>University of Maryland, Baltimore County</p>
-                                <p>Relative Coursework: Calculus I & II </p>
+                                <h3>University of Maryland, Baltimore County</h3>
+                                <p>Information Systems</p>
                             </div>
                         </div>
                         <div class="col-md-12">
