--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,6 @@
     <title>Resume</title>
 </head>
 <body>
-    <iframe class = "pdf" src = "c:\Users\tyleb\Downloads\Resume Tyler Boyd.docx.pdf" width = "800" height="500"></iframe>
+    <iframe class = "pdf" src = "pdf/Resume Tyler Boyd.docx.pdf" width = "800" height="500"></iframe>
 </body>
 </html>
