--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <div class="col-md-6">
                             <div class="edu-col">
                                 <h3>University of Maryland, Baltimore County</h3>
-                                <p>Information Systems</p>
+                                <p>Information Technology</p>
                             </div>
                         </div>
                         <div class="col-md-12">
