--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 <head>
     <link href="css/style.css" rel="stylesheet"></link>
     <title>Resume</title>
+    <link rel = "icon" type = "image/x-icon" href = "img/favicon.png" />
 </head>
 <body>
     <iframe class = "pdf" src = "pdf/Resume Tyler Boyd.docx.pdf" width = "800" height="500"></iframe>
