--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Tyler Boyd</title>
+    <link rel = "icon" type = "image/x-icon" href = "img/favicon.png" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Resume Website Template Free Download" name="keywords">
     <meta content="Resume Website Template Free Download" name="description">
