--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="edu-col">
                                 <h3>University of Maryland, College Park</h3>
                                 <p>Bachelor of Science</p>
-                                <p>Public Health Science</p>
+                                <p>Computer Science</p>
                             </div>
                         </div>
                         <div class="col-md-6">
