--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                         <div class="col-md-6">
                             <div class="exp-col">
                                 <span>Sep-2023 <i>to</i> Current</span>
-                                <h3>iCare Medical</h3>
-                                <h4>Texas City, TX</h4>
+                                <h3>Data Service Group</h3>
+                                <h4>Bear, DE</h4>
                                 <h5>Cloud Operations Engineer</h5>
                                 <p>Led the successful migration of an on-premise application to Amazon Elastic Container Service (ECS). Delivered a presentation on ECS, showcasing its capabilities through a sample demonstration. Aided in CI/CD processes by collaborating with Developers to optimize application code and reduce dependencies. Managed Docker images for microservices, supporting live website updates, order history functionality, and program registration. Maintained repositories on GitHub and DockerHub.
                                 </p>
@@ -208,7 +208,7 @@
                         <div class="col-md-6">
                             <div class="exp-col">
                                 <span>Jan-2022 <i>to</i> Jun-2023</span>
-                                <h3>Concierge Sleep & Wellness</h3>
+                                <h3>DR Financial Services</h3>
                                 <h4>Houston, TX</h4>
                                 <h5>Junior Cloud Tech</h5>
                                 <p>Successfully deployed Python and Node.js applications on EC2 servers, containerized them with Docker, and created Dockerfiles for streamlined installation and dependency management, reducing deployment time by 20%. Effectively utilized Docker Compose to deploy and manage containers, including WordPress and MariaDB, supporting the company’s website and database maintenance.</p>
