--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                 <span>Sep-2023 <i>to</i> Current</span>
                                 <h3>Data Service Group</h3>
                                 <h4>Bear, DE</h4>
-                                <h5>Cloud Operations Engineer</h5>
+                                <h5>DevOps Engineer</h5>
                                 <p>Led the successful migration of an on-premise application to Amazon Elastic Container Service (ECS). Delivered a presentation on ECS, showcasing its capabilities through a sample demonstration. Aided in CI/CD processes by collaborating with Developers to optimize application code and reduce dependencies. Managed Docker images for microservices, supporting live website updates, order history functionality, and program registration. Maintained repositories on GitHub and DockerHub.
                                 </p>
                                 <ul>
