--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Tyler Boyd</title>
     <link rel = "icon" type = "image/x-icon" href = "img/favicon.png" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Resume Website Template Free Download" name="keywords">
-    <meta content="Resume Website Template Free Download" name="description">
+    <meta content="DevOps Enginner" name="keywords">
+    <meta content="Portfolio Website For Devops Engineering" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
