--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="exp-col">
-                                <span>Sep-2023 <i>to</i> Current</span>
+                                <span>Jan-2022 <i>to</i> Current</span>
                                 <h3>Data Service Group</h3>
                                 <h4>Bear, DE</h4>
                                 <h5>DevOps Engineer</h5>
@@ -216,23 +216,11 @@
                         </div>
                         <div class="col-md-6">
                             <div class="exp-col">
-                                <span>Jan-2022 <i>to</i> Jun-2023</span>
-                                <h3>DR Financial Services</h3>
-                                <h4>Houston, TX</h4>
-                                <h5>Junior Cloud Tech</h5>
-                                <p>Successfully deployed Python and Node.js applications on EC2 servers, containerized them with Docker, and created Dockerfiles for streamlined installation and dependency management, reducing deployment time by 20%. Effectively utilized Docker Compose to deploy and manage containers, including WordPress and MariaDB, supporting the company’s website and database maintenance.</p>
-                                <ul>
-                                    
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="exp-col">
                                 <span>May-2021 <i>to</i> Jun-2022</span>
                                 <h3>LetBob Technologies</h3>
                                 <h4>Washington, DC</h4>
-                                <h5>Linux Administrator Intern</h5>
-                                <p>At LetBob Technologies, as a Linux Administrator Intern, I was responsible for managing and securing Linux-based systems. My role involved handling user and group permissions to ensure appropriate access control, automating software installations and updates to maintain system efficiency, and conducting regular system monitoring to identify and report performance issues. I also played a key role in enhancing system security by configuring SSH for secure remote access and applying patches to protect against vulnerabilities.</p>
+                                <h5>Linux Administrator</h5>
+                                <p>At LetBob Technologies, as a Linux Administrator, I was responsible for managing and securing Linux-based systems. My role involved handling user and group permissions to ensure appropriate access control, automating software installations and updates to maintain system efficiency, and conducting regular system monitoring to identify and report performance issues. I also played a key role in enhancing system security by configuring SSH for secure remote access and applying patches to protect against vulnerabilities.</p>
                                 <ul>
                                     
                                 </ul>
