--- a/index.html
+++ b/index.html
@@ -204,8 +204,9 @@
                         <div class="col-md-6">
                             <div class="exp-col">
                                 <span>Jan-2022 <i>to</i> Current</span>
-                                <h3>Data Service Group</h3>
-                                <h4>Bear, DE</h4>
+                                <h3>DR Financial</h3>
+                                <a class="btn" href="https://drfinancialteam.tax/">Website</a>
+                                <h4>6035 A Northdale, Houston, TX 77087</h4>
                                 <h5>DevOps Engineer</h5>
                                 <p>Led the successful migration of an on-premise application to Amazon Elastic Container Service (ECS). Delivered a presentation on ECS, showcasing its capabilities through a sample demonstration. Aided in CI/CD processes by collaborating with Developers to optimize application code and reduce dependencies. Managed Docker images for microservices, supporting live website updates, order history functionality, and program registration. Maintained repositories on GitHub and DockerHub.
                                 </p>
@@ -218,6 +219,7 @@
                             <div class="exp-col">
                                 <span>May-2021 <i>to</i> Jun-2022</span>
                                 <h3>LetBob Technologies</h3>
+                                <a class="btn" href="https://letbob.com/">Website</a>
                                 <h4>Washington, DC</h4>
                                 <h5>Linux Administrator</h5>
                                 <p>At LetBob Technologies, as a Linux Administrator, I was responsible for managing and securing Linux-based systems. My role involved handling user and group permissions to ensure appropriate access control, automating software installations and updates to maintain system efficiency, and conducting regular system monitoring to identify and report performance issues. I also played a key role in enhancing system security by configuring SSH for secure remote access and applying patches to protect against vulnerabilities.</p>
